# pw_ndt_automotive_radar_scan_matching

./: README.md  config.rviz  note
conti_radar/: CMakeLists.txt  README.md  package.xml
conti_radar/msg/: ContiRadar.msg  Measurement.msg
nuscenes/: CMakeLists.txt  package.xml
nuscenes/launch/: ekf_test.launch  lo.launch  nu_ro_video.launch  radar_GND_RO.launch  radar_backstack_icp.launch  radar_ego_motion.launch  radar_ego_motion_eval.launch  radar_icp.launch  radar_img_match.launch  radar_ndt.launch  radar_stack.launch  radar_stack_costmap.launch  radar_stack_single (copy).launch  radar_stack_video.launch  radar_viz.launch  radar_viz_val.launch  stack.launch  tf_nu.launch
nuscenes/src/: conti_merge.cpp  conti_merge_rcs.cpp  gt_odom_publisher.cpp  gt_vel_publisher.cpp  origin_tf_publisher.cpp  radar_vel_viz.cpp  radar_viz.cpp  radar_viz_2.cpp  radar_viz_3.cpp
radar_odometry/: CMakeLists.txt  package.xml
radar_odometry/src/: 4hz_semi_dense.cpp  buffer_test.py  compress_read.cpp  conti_merge_td_comp.cpp  conti_stack.cpp  conti_stack_cov.cpp  conti_stack_cov_with_p_unc.cpp  conti_stack_debug_publisher.cpp  cov_func_point_to_point.h  discriptor_da.cpp  downsampled_semi_dense.cpp  error_mean.cpp  error_mean_kitti.cpp  icp_cov.h  kitti_odom_file_generator.cpp  kitti_odom_file_generator_single.cpp  kitti_odom_file_generator_tf_version.cpp  my_ndt_2d.h  my_ndt_2d.hpp  my_ndt_2d_cost_map.h  my_ndt_2d_cost_map.hpp  ndt_gpu_test.cpp  ndt_test.cpp  odom_error_cal.cpp  odom_error_cal_kitti.cpp  odom_error_cal_tf_version.cpp  radar_ego_motion.cpp  radar_ego_motion_ack.cpp  radar_ego_motion_self_sync.cpp  radar_ego_motion_valid.cpp  radar_ego_motion_valid2.cpp  radar_ego_motion_valid3.cpp  radar_scan_to_img.cpp  sim_gps.py  stack_gnd_costmap.cpp  stack_icp.cpp  stack_ndt.cpp  stack_ndt_d2d_2d.cpp  vel_intgration.cpp
radar_odometry/src/joint_doppler_ndt/: conti_joint_doppler_weight.cpp  joint_doppler_ndt.cpp  joint_doppler_ndt.launch  my_ndt_2d.h  my_ndt_2d.hpp  weighted_ndt_2d.h  weighted_ndt_2d.hpp
radar_odometry/src/lo/: lidar_odometry.cpp  lidar_preprocess.cpp
radar_odometry/src/res/new/: ego_section1_gt.txt  ego_section2_gt.txt  ego_section3_gt.txt  s10_gnd_g3_section1_gt.txt  s10_gnd_g3_section2_gt.txt  s10_gnd_g3_section3_gt.txt  s15_gnd_g3_section1.txt  s15_gnd_g3_section1_gt.txt  s15_gnd_g3_section2.txt  s15_gnd_g3_section3.txt  s15_gnd_g3_section3_gt.txt  s15_icp_section2_gt.txt  s1_icp_section1_gt.txt  s1_icp_section2_gt.txt  s1_icp_section3_gt.txt  s5_gnd_g3_section2_gt.txt  s5_gnd_g3_section3_gt.txt  s5_icp_section1_gt.txt  s5_icp_section3_res.txt
radar_odometry/src/res/new/4hz/: lo_ndt0_rm_g_section1.txt  lo_ndt2_rm_g_section1.txt  lo_ndt2_rm_g_section2.txt  lo_ndt2_rm_g_section2_gt.txt  lo_ndt2_rm_g_section3.txt  lo_ndt2_rm_g_section3_gt.txt  lo_ndt3_rm_g_section1.txt  lo_ndt4_rm_g_section1.txt  lo_ndt5_rm_g_section1.txt  lo_ndt6_rm_g_section1.txt  lo_ndt6_rm_g_section1_gt.txt  lo_ndt7_rm_g_section1.txt  lo_ndt7_rm_g_section1_gt.txt  lo_ndt_rm_g_section1.txt  lo_ndt_rm_g_section1_.txt  lo_ndt_rm_g_section1_gt.txt  lo_ndt_rm_g_section2.txt  lo_ndt_rm_g_section2_gt.txt  lo_ndt_rm_g_section3.txt  lo_ndt_rm_g_section3_gt.txt  lo_rm_g_section1.txt  lo_rm_g_section2.txt  lo_rm_g_section3.txt  lo_section1.txt  s15_gnd_g3_section1.txt  s15_gnd_g3_section1_gt.txt  s15_gnd_g3_section2.txt  s15_gnd_g3_section2_gt.txt  s15_gnd_g3_section3.txt  s15_gnd_g3_section3_gt.txt  s3_gnd_cov_section1.txt  s3_gnd_cov_section1_gt.txt  s3_gnd_cov_section2.txt  s3_gnd_cov_section2_gt.txt  s3_gnd_cov_section3.txt  s3_gnd_cov_section3_gt.txt  test.txt  test_gt.txt
radar_odometry/src/res/new/doppler_ndt/: doppler_ndt_section1.txt  doppler_ndt_section2.txt  doppler_ndt_section3.txt  doppler_ndt_v1_section1.txt  doppler_ndt_v1_section2.txt  doppler_ndt_v1_section3.txt  doppler_ndt_v2.1_section1.txt  doppler_ndt_v2.1_section2.txt  doppler_ndt_v2.1_section2_gt.txt  doppler_ndt_v2_section1.txt  doppler_ndt_v2_section2.txt  doppler_ndt_v2_section2_gt.txt  doppler_ndt_v2_section3.txt  doppler_ndt_v2_section3_gt.txt  ndt_section1.txt  ndt_section1_gt.txt  ndt_section2.txt  ndt_v1_section1.txt  ndt_v1_section2.txt  ndt_v1_section3.txt
radar_odometry/src/res/new/gnd_g3_v1(best_tune)/: s10_gnd_g3_v1_section1.txt  s10_gnd_g3_v1_section1_gt.txt  s10_gnd_g3_v1_section2.txt  s10_gnd_g3_v1_section3.txt  s10_gnd_rcs_section1.txt  s10_gnd_rcs_section2.txt  s10_gnd_rcs_section2_gt.txt  s10_gnd_rcs_section3.txt  s10_gnd_rcs_section3_gt.txt  s15_gnd_g3_v1_section1.txt  s15_gnd_g3_v1_section1_gt.txt  s15_gnd_g3_v1_section2.txt  s15_gnd_g3_v1_section2_gt.txt  s15_gnd_g3_v1_section3.txt  s15_gnd_g3_v1_section3_gt.txt  s5_gnd_cov_section1.txt  s5_gnd_cov_section1_gt.txt  s5_gnd_cov_section2.txt  s5_gnd_cov_section3.txt  s5_gnd_g3_v1_section1.txt  s5_gnd_g3_v1_section2.txt  s5_gnd_g3_v1_section2_gt.txt  s5_gnd_g3_v1_section3.txt  s5_gnd_g3_v1_section3_gt.txt  s5_gnd_rcs_section1.txt  s5_gnd_rcs_section1_gt.txt  s5_gnd_rcs_section2.txt  s5_gnd_rcs_section3.txt  s5_gnd_rcs_section3_gt.txt
radar_odometry/src/res/new/gnd_g3_v2/: s10_gnd_g3_v2_section1.txt  s10_gnd_g3_v2_section1_gt.txt  s10_gnd_g3_v2_section2.txt  s10_gnd_g3_v2_section2_gt.txt  s10_gnd_g3_v2_section3.txt  s10_gnd_g3_v2_section3_gt.txt
radar_odometry/src/res/new_save_SE2_tf_gt/: ego_section4.txt  ego_section4_gt.txt  s10_gnd_g3_section4.txt  s10_gnd_g3_section4_gt.txt  s10_icp_section4.txt  s5_gnd_g3_section4.txt  s5_gnd_g3_section4_gt.txt  s5_icp_section4.txt
radar_odometry/src/res/new_save_SE2_tf_gt/ego/: ego_section1.txt  ego_section1_gt.txt  ego_section2.txt  ego_section2_gt.txt  ego_section3.txt  ego_section3_gt.txt
radar_odometry/src/res/old/gndv3.1/: describe  (+6 more)
radar_odometry/src/viz/: viz_bias_effect_1d.py  viz_costmap.py  viz_dense_ndmap.py  viz_dense_ndmap_single_img.py  viz_dense_ndmap_single_img2.py  viz_dense_ndmap_single_img3.py  viz_dense_ndmap_single_img4.py  viz_dense_ndmap_single_img5.py  viz_gaussian.py  viz_offline_show_from_dense.py  viz_offline_show_sd_from_sparse.py  viz_sd_from_sparse.py  viz_sparse_ndmap.py  viz_test.py
(+187 files in other folders)
